[gd_scene load_steps=7 format=2]

[ext_resource path="res://fx/trails/Trail.gd" type="Script" id=1]
[ext_resource path="res://fx/trails/oilspill_sheet.png" type="Texture" id=2]
[ext_resource path="res://fx/trails/trail.material" type="Material" id=3]
[ext_resource path="res://fx/trails/fumaca_sheet.png" type="Texture" id=4]

[sub_resource type="CanvasItemMaterial" id=1]
blend_mode = 1
particles_animation = true
particles_anim_h_frames = 6
particles_anim_v_frames = 1
particles_anim_loop = true

[sub_resource type="CircleShape2D" id=2]

[node name="Trail" type="Node2D"]
z_index = 1
script = ExtResource( 1 )

[node name="Oil" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 2 )
hframes = 6
__meta__ = {
"_edit_lock_": true
}

[node name="Fire" type="Particles2D" parent="."]
modulate = Color( 0.462745, 0.462745, 0.462745, 1 )
material = SubResource( 1 )
amount = 50
lifetime = 2.0
speed_scale = 1.45
process_material = ExtResource( 3 )
texture = ExtResource( 4 )
normal_map = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 0
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
wait_time = 8.0
one_shot = true

[node name="KillTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="Tween" type="Tween" parent="."]

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="KillTimer" to="." method="_on_KillTimer_timeout"]
